--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<title>W3.CSS Template</title>
+<title>Exchange</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
+
+<head>
+	<link th:href="@{/css/styles-w3.css}" rel="stylesheet" />
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<link th:href="@{/css/styles.css}" rel="stylesheet" />
+</head>
 <style>
 body, html {
     height: 100%;
@@ -20,10 +25,7 @@ body, html {
     display: none;
 }
 </style>
-<head>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<link th:href="@{/css/styles.css}" rel="stylesheet" />
-</head>
+
 <body>
 
 <!-- Links (sit on top) -->
