--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -231,8 +231,8 @@ This application was developed with technologies which Spring Boot, Jquery, HTML
 
 
 <!-- Footer -->
-<footer class="w3-center w3-light-grey w3-padding-48 w3-large">
-  <p>Powered by <a>alejbarros</a></p>
+<footer class="w3-center w3-black w3-padding-48 w3-large">
+  <p>Powered by <a>Meego</a></p>
 </footer>
 
 <script>
